# bazel-test

./: LICENSE  MODULE.bazel
rust-hello/: BUILD
