bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "rules_rust", version = "0.63.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(
    version = "1.25.0",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")

rust.toolchain(
    edition = "2024",
    versions = [ "1.89.0" ],
)
